fix(wearable): fix circularindexscrollbar position issue

--- a/tau/src/css/profile/wearable/changeable/common/circularindexscrollbar.less
+++ b/tau/src/css/profile/wearable/changeable/common/circularindexscrollbar.less
@@ -1,5 +1,5 @@
 .ui-circularindexscrollbar {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left:-100%;
 	z-index: 9999;
