--- a/tau/src/css/profile/wearable/changeable/theme-circle/layout.less
+++ b/tau/src/css/profile/wearable/changeable/theme-circle/layout.less
@@ -92,10 +92,10 @@ body {
 		margin-bottom: 98*@unit_base;
 		padding-top: 0;
 	}
-	.ui-header + .ui-content {
+	.ui-header ~ .ui-content {
 		margin-top: 0;
 	}
-	.ui-content + .ui-footer:not(.ui-expandable-footer) {
+	.ui-content ~ .ui-footer:not(.ui-expandable-footer) {
 		margin-top: -98*@unit_base;
 	}
 }
